Fix collapsing videos, change collapsed navbar colour, update dossieres

--- a/css/style.css
+++ b/css/style.css
@@ -894,3 +894,45 @@
 	    border-radius: 10px;
 	    width: 180px;
 	}
+        
+        #video_promo
+	{
+		max-width: 550px;
+		text-align:center;
+                vertical-align:middle;
+                margin: 0 auto;
+	}
+        
+        #video1, #video2, #video3, #video_promo_sonrecuerdos, #video_promo_sonrecuerdosextracto, #video_promo_123y
+	{
+		max-width: 599px;
+		text-align:center;
+                vertical-align:middle;
+                margin: 0 auto;
+	}
+	
+        .js-video {
+            height: 0;
+            padding-top: 25px;
+            padding-bottom: 57.5%;
+            margin-bottom: 10px;
+            position: relative;
+            overflow: hidden;
+        }
+ 
+        .js-video.widescreen {
+            padding-bottom: 56.34%;
+        }
+ 
+        .js-video.vimeo {
+            padding-top: 0;
+        }
+        
+        .js-video embed, .js-video iframe, .js-video object, .js-video video {
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+        
